--- a/lessons/07-apis-debugging/homework/package.json
+++ b/lessons/07-apis-debugging/homework/package.json
@@ -21,7 +21,8 @@
     "passport-local-mongoose": "^1.0.0",
     "serve-favicon": "^2.3.0",
     "bcrypt-nodejs" : "latest",
-    "connect-flash" : "~0.1.1"
+    "connect-flash" : "~0.1.1",
+    "mongoose": "^4.4.10"
   },
   "devDependencies": {
     "chai": "^3.4.1",
